tests/eu.numberfour.n4js.expectmatrix.tests/xpect-tests/builtin_js/error/error_name.n4js.xt
/* XPECT_SETUP eu.numberfour.n4js.expectmatrix.tests.N4JSExpectMatrixPendingTest END_SETUP */

// Error.name
// Source: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Error/name

var e = new Error("Malformed input"); // e.name is "Error"
console.log(e.toString());

e.name = "ParseError"; 
console.log(e.toString());

/* XPECT output --- 
<==
stdout:
Error: Malformed input
ParseError: Malformed input
stderr:
==>
--- */
